@@ -1,369 +1,0 @@
-<HTML>
-<HEAD>
-<TITLE>Transformiix (TM)  Contributors</TITLE>
-<META name="author" content="Keith Visco">
-</HEAD>
-<BODY Text="#000000" BGColor="#FFFFFF">
-<!-- OUTER TABLE -->
-<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" WIDTH="640">
-<TR>
-<TD WIDTH="80"></TD>
-<TD WIDTH="560" COLSPAN="2" ALIGN="RIGHT">
-  <B><FONT SIZE="+2">Transfor<FONT Color="blue">Mii</FONT>X</FONT></B>
-  <SUP>TM</SUP>
-</TD>
-</TR>
-<TD WIDTH="80"><BR></TD>
-<TD WIDTH="560" COLSPAN="2">
-<!-- Contents -->
-<HR SIZE="1" />
-<BR/>
-<P>
-  Much of the original <B>Transfor<FONT Color="blue">Mii</FONT>X</B> code was ported
-  from <A HREF="http://www.clc-marketing.com/xslp">XSL:P</A>,
-  an open source XSLT processor. Thanks to all the contributors of
-  that project.  TransforMiiX is now a whole new beast...thanks to all
-  of the hard work of those listed below.
-<P>
-<P>
-<B>Core Developers</B><P>
-The following people have contributed substantial time and
-effort to the development.
-<TABLE WIDTH="100%" CELLSPACING="1">
-<TR BGColor="#EEEEEE"><TH>Name</TH><TH>Contribution</TH><TH>Company</TH></TR>
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A href="mailto:kvisco@ziplink.net">Visco, Keith</a>
-  </TD>
-  <TD VALIGN="TOP" WIDTH="300">
-    Software design, and most of the XSLT implementation and
-    base classes implementation.
-  </TD>
-  <TD VALIGN="TOP">
-    <A HREF="http://www.exoffice.com">Exoffice Technologies</A>
-    <P>
-    <FONT SIZE="-1">Formerly with The MITRE Corporation</FONT>.
-  </TD>
-</TR>
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A href="mailto:tomk@mitre.org">Kneeland, Tom</a>
-  </TD>
-  <TD>
-    Software design, DOM Implementation. Handled the initial
-    Mozilla integration and wrapper classes,
-    String and String wrapper classes.
-  </TD>
-  <TD VALIGN="TOP">
-    <A HREF="http://www.mitre.org">The MITRE Corporation</A>
-  </TD>
-</TR>
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A HREF="mailto:peter.vanderbeken@pandora.be">Van der Beken, Peter</A>
-  </TD>
-  <TD VALING="TOP" WIDTH="300">
-    Leading the Transformiix/Mozilla integration,
-    and Macintosh porting issues. Without Peter...we'd be doomed! :-)
-  </TD>
-  <TD VALIGN="TOP">
-    <BR>
-  </TD>
-</TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A HREF="mailto:axel@pike.org">Hecht, Axel</A> (AKA - Pike)
-  </TD>
-  <TD WIDTH="300">
-    Build issues...configure, Make, etc. Solaris porting issues.
-    All nasty comments on regarding make files should now be directed to Pike!
-  </TD>
-  <TD VALIGN="TOP">
-    <BR>
-  </TD>
-</TR>
-
-</TABLE>
-</P>
-<P>
-<P>
-<B>Additional Developers</B><P>
-The following people have contributed to the development.
-<BR>(appearing in alphabetical order)
-<TABLE WIDTH="100%" CELLSPACING="1">
-<TR BGColor="#EEEEEE"><TH>Name</TH><TH>Contribution</TH><TH>Company</TH></TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A HREF="mailto:arthur.barrett@march-hare.com">Barrett, Arthur</A>
-  </TD>
-  <TD WIDTH="300">
-    Working on Windows makefiles.
-  </TD>
-  <TD VALIGN="TOP">
-    <BR>
-  </TD>
-</TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A HREF="mailto:bbrown@solana.com">Brown, William Lewis</A>
-  </TD>
-  <TD WIDTH="300">
-    Working with Marina on XSLT 1.0 conformity issues.
-  </TD>
-  <TD VALIGN="TOP">
-    <BR>
-  </TD>
-</TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A HREF="mailto:duxy@leyou.com.cn">Du, Eric</A>
-  </TD>
-  <TD WIDTH="300">
-     FreeBSD floating point porting issues
-  </TD>
-  <TD VALIGN="TOP">
-    <BR>
-  </TD>
-</TR>
-
-<!-- Entry -->
-
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A HREF="mailto:lef@opentext.com">Fitzpatrick, Larry</A>
-  </TD>
-  <TD WIDTH="300">
-    Larry was the first contributor to the project. He sent
-    a number of C++ porting issues with Visual C++,
-    and has influenced some of the early design.
-  </TD>
-  <TD VALIGN="TOP">
-    <A HREF="http://www.opentext.com">OpenText</A>
-  </TD>
-</TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A HREF="mailto:ogerardin@vo.lu">Gerardin, Olivier</A>
-  </TD>
-  <TD WIDTH="300">
-    Implemented the XPath Number functions, the document()
-    function, as well as some other changes/improvements.
-    <FONT SIZE="-1">
-       (see <A HREF="changes.txt">changes.txt</A> for more info)
-    </FONT>
-  </TD>
-  <TD VALIGN="TOP">
-    <A HREF="http://www.digitalwave.lu">DigitalWave</A>
-  </TD>
-</TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A HREF="mailto:rguarino@wavo.com">Guarino, Bobbi</A>
-  </TD>
-  <TD WIDTH="300">
-    Solaris porting issues
-  </TD>
-  <TD VALIGN="TOP">
-    <A HREF="http://www.wavo.com">Wavo Corporation</A>
-  </TD>
-</TR>
-
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A HREF="mailto:Heesch@t-online.de">Heesch, Stefan</A>
-  </TD>
-  <TD WIDTH="300">
-    C++ porting issues with Borland C
-  </TD>
-  <TD VALIGN="TOP">
-    <BR><A HREF=""></A>
-  </TD>
-</TR>
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A HREF="mailto:joe@pwd.hp.com">Kuan, Joseph</A>
-  </TD>
-  <TD WIDTH="300">
-    Sent changes for getting TransforMiiX to build on HPUX, SUNOS and AIX.
-    <I>I still need to add these into the CVS.</I>
-  </TD>
-  <TD VALIGN="TOP">
-    <A HREF="http://www.hp.com">Hewlett-Packard</A>
-  </TD>
-</TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A HREF="mailto:mclee@oblix.com">Lee, Michele</A>
-  </TD>
-  <TD WIDTH="300">
-    C++ porting issues, bug reports
-  </TD>
-  <TD VALIGN="TOP">
-    <A HREF="http://www.oblix.com">Oblix</A>
-  </TD>
-</TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A HREF="mailto:lidong@leyou.com.cn">Lidong</A>
-  </TD>
-  <TD WIDTH="300">
-    Some Unicode bug fixes
-  </TD>
-  <TD VALIGN="TOP">
-    <A HREF="http://www.leyou.com">Leyou.com</A>
-  </TD>
-</TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A HREF="mailto:mmarina@mindspring.com">Mechtcheriakova, Marina</A>
-  </TD>
-  <TD WIDTH="300">
-    Contributed a number of bug fixes, as well as handling
-    some conformity issues.
-  </TD>
-  <TD VALIGN="TOP">
-    <BR>
-  </TD>
-</TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A HREF="mailto:kbob@oblix.com">Miller, Bob</A>
-  </TD>
-  <TD WIDTH="300">
-    A number of bug fixes, C++ porting issues
-  </TD>
-  <TD VALIGN="TOP">
-    <A HREF="http://www.oblix.com">Oblix</A>
-  </TD>
-</TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A HREF="mailto:andreas.otte@primus-online.de">Otte, Andreas</A>
-  </TD>
-  <TD WIDTH="300">
-    Helping Axel with build issues...configure, make files, etc.
-  </TD>
-  <TD VALIGN="TOP">
-    <BR>
-  </TD>
-</TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A HREF="mailto:npride@wavo.com">Pride, Nathan</A>
-  </TD>
-  <TD WIDTH="300">
-    Solaris porting issues, some general bug fixes
-  </TD>
-  <TD VALIGN="TOP">
-    <A HREF="http://www.wavo.com">Wavo Corporation</A>
-  </TD>
-</TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD VALIGN="TOP">
-    <A HREF="mailto:jjs@acis.com.au">Smith, Justin</A>
-  </TD>
-  <TD WIDTH="300">
-    Working on Windows Makefiles.
-  </TD>
-  <TD VALIGN="TOP">
-    <BR>
-  </TD>
-</TR>
-
-
-
-</TABLE>
-
-<P><B>Testing/Feedback (Suggestions/Bug Reports)</B><P>
-The following people have used TransforMiiX and provided feedback that has been
-beneficial to the development.
-<BR>(appearing in alphabetical order)
-<TABLE BORDER="0" WIDTH="100%">
-<TR BGColor="#EEEEEE"><TD><B>Name</B></TD><TD><B>Company</B></TD></TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD><A HREF="mailto:jbailey@nisa.net">Bailey, Jeff</A></TD>
-  <TD><BR></TD>
-</TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD><A HREF="mailto:bbrown@solana.com">Brown, William Lewis</A></TD>
-  <TD><BR></TD>
-</TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD><A HREF="mailto:tlebouil@lucent.com">Le Bouil, Thierry</A></TD>
-  <TD><A HREF="http://www.lucent.com">Lucent Technologies, Inc.</A></TD>
-</TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD><A HREF="mailto:schefer@xo3.com">Schefer, Marc</A></TD>
-  <TD><BR></TD>
-</TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD><A HREF="mailto:jiwei.wang@saraide.com">Wang, Jiwei</A></TD>
-  <TD><BR></TD>
-</TR>
-
-<!-- Entry -->
-<TR BGColor="#EEEEEE">
-  <TD>
-      <A HREF="mailto:bzwische@email.archlab.tuwien.ac.at">
-       Zwischenbrugger, Bernhard</A>
-  </TD>
-  <TD><BR></TD>
-</TR>
-
-</TABLE>
-<!-- End Contents -->
-
-<!-- Footer -->
-<HR SIZE="1">
-<FONT SIZE="-1">
-The MITRE Corporation, Keith Visco (C) Copyright 1999-2000, All rights reserved<BR>
-Email:<A HREF="mailto:kvisco@ziplink.net">kvisco@ziplink.net</A>
-</FONT>
-<!-- End Footer -->
-</TD>
-</TR>
-</TABLE>
-<!-- End Outer Table -->
-</HTML>
